# nnx-ppo

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmark_results/dm_control_suite/: CartpoleBalance_brax.csv  CartpoleBalance_nnx_ppo.csv  CartpoleSwingup_brax.csv  CartpoleSwingup_nnx_ppo.csv  FingerSpin_brax.csv  FingerSpin_nnx_ppo.csv  HopperStand_brax.csv  PendulumSwingup_nnx_ppo.csv  ReacherEasy_brax.csv  ReacherHard_brax.csv  WalkerStand_nnx_ppo.csv
benchmark_results/dm_control_suite/old/: HumanoidStand_brax.csv  HumanoidStand_nnx_ppo.csv  ReacherEasy_nnx_ppo.csv  ReacherHard_nnx_ppo.csv
docs/: Makefile  _design_notes.md  conf.py  index.rst
docs/api/: algorithms.rst  jax_dataclass.rst  networks.rst  wrappers.rst
docs/reference/: batching.rst  checkpointing.rst  containers.rst  contexts.rst  delay_and_normalizer.rst  logging.rst  parameters.rst  ppo_adapter.rst  randomness.rst  utils.rst
docs/tutorials/: 01_quickstart.rst  02_composition.rst  03_graph.rst  04_custom_module.rst
examples/: cartpole_mlp.py  compare_with_brax.py  custom_net.py  modular_rodent.py  no_jit.py  no_jit2.py  parrot_mlp.py  rodent_enc_dec.py  rodent_imitation.py  rodent_recurrent.py  wandb_logging.py
nnx_ppo/: conftest.py  jax_dataclass.py
nnx_ppo/algorithms/: adapter.py  adapter_test.py  callbacks.py  checkpointing.py  checkpointing_test.py  config.py  distillation.py  distillation_test.py  distributions.py  metrics.py  ppo.py  ppo_test.py  rollout.py  rollout_test.py  types.py
nnx_ppo/networks/: adapter.py  adapter_test.py  ar1_rollout_test.py  containers.py  containers_test.py  delay.py  delay_test.py  factories.py  factories_test.py  feedforward.py  feedforward_test.py  modules.py  modules_test.py  normalizer.py  normalizer_test.py  recurrent.py  recurrent_test.py  sampling_layers.py  types.py  utils.py  utils_test.py  variational.py  variational_test.py
nnx_ppo/networks/graph/: __init__.py  connection.py  graph.py  graph_test.py  population.py
nnx_ppo/test_dummies/: action_sigma_debug.py  dict_obs_act_env.py  dummy_counter.py  episode_wrapper.py  mock_env.py  move_from_center_env.py  move_to_center_env.py  parrot_env.py  stateful_nets.py
nnx_ppo/wrappers/: episode_wrapper.py  episode_wrapper_test.py  reward_scaling_wrapper.py
old_snippets/: action_sigma_debug.py  cartpole_mlp.py  debug_rollout.py  nnx_quick_test_.py  no_jit.py  non_jitted.py  parrot_mlp.py  quick_test_.py  rodent_imitation_no_jit.py  step_rodent.py  test_checkify.py  test_rodent.py  training_brax_match.py
