[project]
name = "nnx_ppo"
version = "0.1.0"
description = "Implementation of PPO for recurrent/stateful networks using JAX and flax.nnx."
authors = [
    { name="Emil Wärnberg", email="ewarnberg@fas.harvard.edu" }
]

dependencies = [
    "flax>=0.12.4",
    "jax[cuda12]",
    "ml_collections",
    "orbax-checkpoint",
    "jaxtyping",
]

[project.optional-dependencies]
dev = ["beartype", "pytest", "pyright", "brax", "playground"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["nnx_ppo"]
